Fixed alignment in css.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,35 +20,40 @@ h1 {
     
 }
 
+.container {
+   display: flex;
+   justify-content: center;
+   width: 100%;
+   height: 100vh;
+}
+
 #displayCard {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
-    height: 100vh;
     
+ }
+#singleCard {
+   display: flex;
+   justify-content: center;
+}
+
+ .newContainer {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
  }
 
  #videoCard {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 500px;
 
  }
 
  .ivideo {
    margin-bottom: 15px;
  }
-
-  #singleCard {
-    display: block;
-    position: absolute;
-    top: 20vh;
-    left: 42.5%;
-    width: 100%;
- } 
-
 
 .card {
     border: 2px solid black;
@@ -66,6 +71,7 @@ h1 {
     justify-content: center;
     margin-bottom: 5px;
  }
+
  .newButton {
     width: 150px;
     height: 35px;
@@ -81,9 +87,6 @@ h1 {
  .newCard{
     border: 2px solid black;
     width: 350px;
-    display: flex;
-    flex-direction: column;
-    margin-top: 35%;
     margin-left: 15px;
     border-radius: 5px;
     padding: 5px;
